# PropertyExperiment

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  aobject.cpp  aobject.h  aproperty.cpp  main.cpp  mobject.h  mproperty.cpp  mproperty.h  sobject.cpp  sobject.h
.github/workflows/: autotest-clang.yml  autotest-gcc.yml  autotest-msvc.yml  autotest.yml  cmake-build.yml  codeql.yml  reporting.yml  testreport.yml
aobject/: CMakeLists.txt  README.md  aobject.h  aobjecttest.cpp  aobjecttest.h  aproperty.h
cmake/: CodePoetryAssertions.cmake  CodePoetryCompileOptions.cmake  CodePoetryNormalizeVersion.cmake
experiment/: backports.cpp  backports.h  experiment.cpp  experiment.h
mobject/: CMakeLists.txt  README.md  mobject.cpp  mobjecttest.cpp  mobjecttest.h  mproperty.h
nobject/: CMakeLists.txt  README.md  nconcepts.cpp  nconcepts.h  nlinenumber.cpp  nlinenumber_p.h  nmetaenum.cpp  nmetaenum.h  nmetaobject.cpp  nmetaobject.h  nmetaobject_p.h  nobjecttest.cpp  nobjecttest.h  nproperty.cpp  nproperty.h  nproperty_p.h  ntypetraits.cpp  ntypetraits.h
reporting/: CMakeLists.txt  githubwriter.cpp  githubwriter.h  junitwriter.cpp  junitwriter.h  lightxmlreader.cpp  lightxmlreader.h  markdownwriter.cpp  markdownwriter.h  markup.cpp  markup.h  reporting.cpp  reporting.h
sobject/: CMakeLists.txt  README.md  sobject.cpp  sobjecttest.cpp  sobjecttest.h
